[project]
name = "app"
version = "0.1.0"
description = "AutoTrader"
authors = [
    { name = "Junya Iizuka", email = "Junya_Iizuka@jmas.co.jp" }
]
dependencies = [
    "polars>=1.17.1",
    "mplfinance>=0.12.10b0",
    "pandas-datareader>=0.10.0",
    "yfinance>=0.2.51",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
